# code-editor

./: CMakeLists.txt  README.md
include/: trie.hpp
src/: main.cpp
src/auto_complete/: auto_complete.hpp  trie.hpp
src/code_parser/: ast.h  ast.hpp  bb.h  cfg_builder.h  ctx.hpp  lexer.cpp  lexer.hpp  lexer.l  parser.tab.cpp  parser.tab.hpp  parser.y
src/compiler/: Makefile  README.md  compiler.cpp  kompilator
src/compiler/frontend/: ast.h  compiler.l.c
src/gembailer/backend/: asm.cpp  asm.h  generator.cpp  generator.h
src/gembailer/frontend/: compiler.tab.cpp  compiler.tab.hpp  lexer.l  parser.y
src/maszyna_wirtualna/: lexer.cc  maszyna-wirtualna  mw.cc  parser.cc  parser.hh
src/pattern_finder/: pattern_finder.h
src/static_analyzer/: static_analyzer.cpp  static_analyzer.hpp
src/syntax_highlighter/: syntax_highlighter.hpp  syntax_highlighter.l  syntax_highlighter_patoC.l
